# Echess

./: .gitignore  README.md  pyproject.toml  schema.sql  tasks.py
Documentations/: Architecture.md  Specification Document.md  Time Usage.md  changelog.md
laskarit/: viikko2.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: Testikattavuusraportti.md  kassapääte_test.py  maksukortti_test.py
laskarit/viikko3/: changelog.md  hsl.md  tehtävä1.md
src/: app.py  chess.py  db.py  index.py  users.py
src/chess_files/: chess.py
src/database_files/: db.py
src/templates/: index.html  login.html  register.html
src/tests/: test_chess.py
