[project]
name = "echess"
version = "0.1.0"
description = ""
authors = [
    {name = "Erik Vormala",email = "erik.vormala@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
